--- a/styles/style.css
+++ b/styles/style.css
@@ -238,8 +238,16 @@
 	  @media only screen and (max-width: 718px) {
 		ul{
 		
-			display: none;
+			font-size: 10px;
+			
+			
+			border-bottom: 2px solid #000;
+			padding-bottom: 30px;
+		}
 		
+		.header{
+			
+			padding: 0;
 		}
 		form{
 			margin: 10px auto;
@@ -265,4 +273,46 @@
 		}
 
 
+		.posts{
+			max-width: 80%;
+			margin: 100px auto;
+			background-image: linear-gradient(135deg, #629fc7 0%, #686cc0 100%);
+			padding: 40px 30px;
+			border-radius: 15px;
+			position: relative;
+	
+	
+		}
+	
+		.post h3{
+			font-size: 20px;
+			margin-top: -10px;
+			font-weight: bold;
+			
+		}
+	
+		.post p{
+			font-size: 20px;
+			color: rgb(207, 223, 223);
+		}
+	
+		.bottom{
+	
+			bottom: 10px;
+			font-size: 20px;
+			color: #1d216b;
+			font-weight: bold;
+		}
+		.bottom-left{
+			position: absolute;
+			
+			left: 20px;
+	
+		}
+	
+		.bottom-rigth{
+			position: absolute;
+			right: 20px;
+			
+		}
 	  }
