--- a/styles/style.css
+++ b/styles/style.css
@@ -232,6 +232,13 @@
 		max-width: 100%;
 		
 	}
+	.main-body{
+		text-align: center;
+		max-width: 900px;
+		margin: 300px auto;
+		color: #1d216b;
+		font-size: 10px;
+	}
 	  }
 
 
@@ -279,7 +286,7 @@
 		}
 	
 		.contacts a{
-				font-size: 2g0px;
+				font-size: 20px;
 				display: flex;
 				flex-direction: column;
 	
